2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘newlocklst’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘newlocks’.
	(newlocklst): Delete var.
	(rmnewlocklst): Take arg ‘dc’; use ‘dc->newlocks’.
	(dolocks): Use ‘dc->newlocks’.
	(main): Use ‘dc.newlocks’; update call to ‘rmnewlocklst’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘delrev’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘delrev’.
	(putdelrev): Interpret arg ‘data’ to be ‘admin_closure *dc’;
	use ‘dc->delrev’.
	(removerevs): Use ‘dc->delrev’.
	(main): Use ‘dc.delrev’; update call to ‘parse_revpairs’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘lockhead’, ‘unlockcaller’ from global state of rcs(1).

	* rcs.c (struct admin_closure):
	Add members ‘lockhead’, ‘unlockcaller’.
	(lockhead, unlockcaller): Delete vars.
	(dolocks): Use ‘dc->unlockcaller’, ‘dc->lockhead’.
	(main): Use ‘dc.lockhead’, ‘dc.unlockcaller’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘suppress_mail’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘suppress_mail’.
	(suppress_mail): Delete var.
	(sendmail): Take 3rd arg ‘suppress_mail’.
	(breaklock): Take 2nd arg ‘suppress_mail’; update call to ‘sendmail’.
	(setlock, dolocks): Update calls to ‘breaklock’.
	(main): Use ‘dc.suppress_mail’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove outdate vars from global state of rcs(1).

	U (X...) ≡ "Take arg ‘dc’; use ‘dc->X’, ...";
	U (*) ≡ U (cuthead, cuttail, delstrt).
	* rcs.c (struct admin_closure):
	Add members ‘cuthead’, ‘cuttail’, ‘delstrt’.
	(cuthead, cuttail, delstrt): Delete vars.
	(scanlogtext): U (cuttail).
	(searchcutpt): U (cuthead).
	(removerevs): U (*); update call to ‘searchcutpt’.
	(buildeltatext): U (cuttail, cuthead); update call to ‘scanlogtext’.
	(buildtree): U (*).
	(main): Use ‘dc.cuthead’, ‘dc.cuttail’; update calls to