@@ -1,5 +1,14 @@
 2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Remove ‘rmvlocklst’ from global state of rcs(1).
+
+	* rcs.c (struct admin_closure): Add member ‘byelocks’.
+	(rmvlocklst): Delete var.
+	(dolocks): Use ‘dc->byelocks’.
+	(main): Use ‘dc.byelocks’.
+
+2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Remove ‘newlocklst’ from global state of rcs(1).
 
 	* rcs.c (struct admin_closure): Add member ‘newlocks’.
